--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -37,14 +37,9 @@ html, body, #root, .app-wrap {
   height: 100%;
   overflow: hidden;
 }
-.app-wrap {
-  display: flex;
-  flex-direction: column;
-}
-.app-wrap-con {
-  flex: 1;
-  overflow: hidden;
-}
-.am-tab-bar {
-  height: auto !important;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
 }
