--- a/my-app/src/components/App.css
+++ b/my-app/src/components/App.css
@@ -1,21 +1,30 @@
 .App {
+  width: 100%;
+  height: 100%;
+  color: #DDDDDD;
+  background-color: #212121;
+}
+
+.App-header {
+  height: 55px;
+  line-height: 55px;
+  color: #FFD700;
   text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  width: 30px;
+  height: 25px;
+  margin-top: -5px;
+  vertical-align: middle;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App-title {
+  display: inline-block;
+  height: 55px;
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: 300;
 }
 
 .App-link {
