--- a/my-app/src/components/MusicTab/index.css
+++ b/my-app/src/components/MusicTab/index.css
@@ -1,12 +1,28 @@
-.music-tab{
+.music-tabs{
+  width: 100%;
+  height: 30px;
+  line-height: 30px;;
   background-color: #212121;
+  color: #DDDDDD;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 .tabs-item{
-  display: 'flex';
-  align-items: 'center';
-  justify-content: 'center';
+  flex: 1;
+  text-align: center;
   height: '250px';
-  background-color: '#212121';
+  
+}
+.nav-link{
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+.nav-link.active{
+  color: #FFD700;
+  border-bottom: 1px solid #FFD700;
 }
 .am-tabs-default-bar-underline{
   border: 1px solid transparent;
