--- a/my-app/src/common/Loading/index.css
+++ b/my-app/src/common/Loading/index.css
@@ -5,9 +5,12 @@
   width: 100%;
   height: 100%;
   z-index: 999;
+  display: -webkit-flex;
   display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
   justify-content: center;
-  align-content: center;
 }
 .loading-wrapper{
   display: inline-block;
