--- a/my-app/src/common/Loading/index.css
+++ b/my-app/src/common/Loading/index.css
@@ -1,9 +1,10 @@
-.loading-container{
-  position: absolute;
+
+.loading-wrapper{
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   z-index: 999;
   display: -webkit-flex;
   display: flex;
@@ -11,9 +12,9 @@
   align-items: center;
   -webkit-justify-content: center;
   justify-content: center;
-}
-.loading-wrapper{
-  display: inline-block;
+  flex-direction: column;
   font-size: 12px;
-  text-align: center;
+}
+.loading-title{
+  margin-top: 10px;
 }
