--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -31,6 +31,16 @@
   color: #61dafb;
 }
 
+.translate-enter{
+  transform: translate3d(100%, 0, 0);
+}
+
+.translate-enter-active{
+  transition: transform .3s;
+  transform: translate3d(0, 0, 0);
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
