--- a/my-app/src/components/Player/index.css
+++ b/my-app/src/components/Player/index.css
@@ -58,6 +58,13 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+/**
+** css3 animation 动画
+*/
+.singer-middle > .singer-img.rotate{
+  animation: rotate 15s linear infinite;
+  -webkit-animation: rotate 15s linear infinite;
+}
 .singer-middle > .singer-img > img{
   width: 100%;
   height: 100%;
@@ -97,4 +104,35 @@
 }
 .progress-wrapper > .play-progress{
   flex: 1;
+}
+.play-wrapper{
+  width: 100%;
+  display: flex;
+  color: #FFD700;
+  align-items: center;
+  text-align: center;
+  margin-top: 10px;
+}
+.play-wrapper > div{
+  flex: 1;
+}
+.play-wrapper > div.play-model-button{
+  text-align: left;
+}
+.play-wrapper > div.play-list-button{
+  text-align: right;
+}
+.play-wrapper > div > img{
+  width: 36px;
+  height: 36px;
+  color: #FFD700;
+}
+
+@keyframes rotate {
+  from { transform: rotateZ(0deg) ; -webkit-transform: rotateZ(0deg) ; -moz-transform: rotateZ(0deg) ; -ms-transform: rotateZ(0deg) ; -o-transform: rotateZ(0deg) ; }
+  to { transform: rotateZ(360deg) ; -webkit-transform: rotateZ(360deg) ; -moz-transform: rotateZ(360deg) ; -ms-transform: rotateZ(360deg) ; -o-transform: rotateZ(360deg) ; }
+}
+@-webkit-keyframes rotate {
+  from { transform: rotateZ(0deg) ; -webkit-transform: rotateZ(0deg) ; -moz-transform: rotateZ(0deg) ; -ms-transform: rotateZ(0deg) ; -o-transform: rotateZ(0deg) ; }
+  to { transform: rotateZ(360deg) ; -webkit-transform: rotateZ(360deg) ; -moz-transform: rotateZ(360deg) ; -ms-transform: rotateZ(360deg) ; -o-transform: rotateZ(360deg) ; }
 }
