--- a/my-app/src/components/Player/index.scss
+++ b/my-app/src/components/Player/index.scss
@@ -7,12 +7,78 @@
   height: 100%;
   color: #FFFFFF;
   background-color: #212121;
-  /* display: none; */
+  display: none;
   transform-origin: 0 bottom;
 }
 .player-box > .player{
   width: 100%;
   height: 100%;
+  &.player-rotate-enter{
+    transform: rotateZ(90deg)  ;
+    -webkit-transform: rotateZ(90deg)  ;
+    -moz-transform: rotateZ(90deg)  ;
+    -ms-transform: rotateZ(90deg)  ;
+    -o-transform: rotateZ(90deg)  ;
+    &.player-rotate-enter-active{
+      transition: transform 1s    ;
+      -webkit-transition: transform 1s    ;
+      -moz-transition: transform 1s    ;
+      -ms-transition: transform 1s    ;
+      -o-transition: transform 1s    ;
+      transform: rotateZ(0deg)    ;
+      -webkit-transform: rotateZ(0deg)    ;
+      -moz-transform: rotateZ(0deg)    ;
+      -ms-transform: rotateZ(0deg)    ;
+      -o-transform: rotateZ(0deg)    ;
+}
+  }
+  &.player-rotate-exit{
+    transform: rotateZ(0deg)  ;
+    -webkit-transform: rotateZ(0deg)  ;
+    -moz-transform: rotateZ(0deg)  ;
+    -ms-transform: rotateZ(0deg)  ;
+    -o-transform: rotateZ(0deg)  ;
+    &.player-rotate-exit-active{
+      transition: transform 1s    ;
+      -webkit-transition: transform 1s    ;
+      -moz-transition: transform 1s    ;
+      -ms-transition: transform 1s    ;
+      -o-transition: transform 1s    ;
+      transform: rotateZ(90deg)    ;
+      -webkit-transform: rotateZ(90deg)    ;
+      -moz-transform: rotateZ(90deg)    ;
+      -ms-transform: rotateZ(90deg)    ;
+      -o-transform: rotateZ(90deg)    ;
+    }
+  }
+}
+.player-header{
+  width: 100%;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-size: 18px;
+}
+.player-header > .player-back{
+  width: 36px;
+  height: 36px;
+  position: fixed;
+  top: 9px;
+  left: 10px;
+}
+.player-header > .player-back > img{
+  width: 100%;
+  height: 100%;
+}
+.player-header > .heade-title{
+  width: 100%;
+  text-align: center;
+}
+.player > .singer-top{
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
 }
 .player-box > .player > .player-bg{
   position: fixed;
