--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -43,3 +43,30 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
+
+.music-ico{
+  width: 14px;
+  position: fixed;
+  z-index: 9999;
+  transition: transform 1s cubic-bezier(.59, -0.1, .83, .67);
+  -webkit-transition: transform 1s cubic-bezier(.59, -0.1, .83, .67);
+  -moz-transition: transform 1s cubic-bezier(.59, -0.1, .83, .67);
+  -ms-transition: transform 1s cubic-bezier(.59, -0.1, .83, .67);
+  -o-transition: transform 1s cubic-bezier(.59, -0.1, .83, .67);
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  display: none;
+}
+.music-ico > div{
+  transition: transform 1s;
+  -webkit-transition: transform 1s;
+  -moz-transition: transform 1s;
+  -ms-transition: transform 1s;
+  -o-transition: transform 1s;
+}
+.music-ico > div > img{
+  width: 100%;
+}
